[package]
name = "mcp-sdlt"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" , features = ["server", "transport-sse-server", "transport-io"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["macros", "rt", "rt-multi-thread", "io-std", "signal"] }
serde_json = "1.0.140"
